{
    "name": "playerAction",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "cf8be077-753a-4f24-ac10-1982e829d0f4",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d17a3a68-bbc3-42ac-9289-ebf0acb65ad1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "0cc3f622-7f69-4576-b5c4-ea791c157a78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f23f0a8e-bfb1-4fe4-94fe-bf0d9c39fae3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c1a226a-798a-4b6a-be19-e93fdc4e1c4d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e46b104d-35ab-4d23-bc44-a53035daafd4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "IngameMenu",
            "id": "6f165261-22a8-4e85-92bc-7a367b25dc24",
            "actions": [
                {
                    "name": "CallPauseMenu",
                    "type": "Button",
                    "id": "8dcc3267-f089-4c1e-b90c-db56607c938a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b4f4645-8d3e-49c8-849b-e9f18079b653",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CallPauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c710f520-8dad-4f89-937f-7eb3f72e68e8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CallPauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": []
        }
    ]
}